--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -91,7 +91,7 @@
         position: absolute;
         background: #011f35;
         top: 8vh;
-        height: 50vh;
+        height: 60vh;
         width: 100%;
         color: #000;
         z-index: 2;
